@@ -38,6 +38,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <A NAME="references"><B>References</B></A>
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_NoAbstract.sql.rpt">References w/ PubMed ID and No Abstract</A> <B>(jeo)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/BIB_DupPM_DOI.sql.rpt">References w/ Duplicated PubMed and DO IDs</A> <B>(jeo)</B>
 </OL>
 
 <A NAME="alleles"><B>Alleles (csmith, smb, dlb, honda, mnk)</B> </A>
