@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-10-3
+DATE: 05/4/2017
+STAFF: sc
+CHANGES: TR12573
+1) added mgd/BIB_DupPM_DOI.sql
+
 TAG: qcreports_db-6-0-10-2
 TAG: qcreports_db-6-0-10-1
 DATE: 04/27/2017
